--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Razvi42.github.io/foodieshub",
+  "homepage": "https://Razvi42.github.io/food-app",
   "name": "food-app",
   "version": "0.1.0",
   "private": true,
